# slippy

./: .clang-tidy  .editorconfig  README.md  library.json  meson.build
.github/workflows/: build.yml  coverity.yml
examples/: decode.c  encode.c
include/: slippy.h
src/: slippy.c
tests/: test_reader.c  test_writer.c
